[gd_scene load_steps=2 format=2]

[ext_resource path="res://misc/terkep.gd" type="Script" id=1]

[node name="terkep" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
visible = false
margin_left = -637.502
margin_top = -379.031
margin_right = -497.502
margin_bottom = -298.031
rect_pivot_offset = Vector2( 132.497, 81.4472 )
text = "spider forest"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="second area" type="Button" parent="."]
visible = false
margin_left = -640.677
margin_top = -258.389
margin_right = -500.677
margin_bottom = -177.389
rect_pivot_offset = Vector2( 132.497, 81.4472 )
text = "second area"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="adventure" type="Button" parent="."]
visible = false
margin_left = -723.587
margin_top = 197.137
margin_right = -527.587
margin_bottom = 314.137
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 132.497, 81.4472 )
text = "go to the  spider forest"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="adventure2" type="Button" parent="."]
margin_left = -126.537
margin_top = 58.2707
margin_right = 123.463
margin_bottom = 175.271
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 132.497, 81.4472 )
text = "go to the spider forest"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -3.1748, 3.1748 )
current = true
zoom = Vector2( 2, 2 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = -796.0
margin_top = -580.0
margin_right = -287.0
margin_bottom = -450.0
rect_scale = Vector2( 3, 3 )
text = "Hello adventurer!
Your job is to get rid of the unpleasant lifeforms from the following areas. Each cleared zone will reward you with loot, so you go after tougher beasts. equip your adventurers with the best loot, and place them tactically to be victorius!
Good luck"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
visible = false
margin_left = -219.714
margin_top = -215.532
margin_right = -135.714
margin_bottom = -195.532
rect_scale = Vector2( 5, 5 )
text = "place allies"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="second area" to="." method="_on_second_area_pressed"]
[connection signal="pressed" from="adventure" to="." method="_on_adventure_pressed"]
[connection signal="pressed" from="adventure2" to="." method="_on_adventure2_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
